2008-08-13  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-cmd.el (eshell/which): Handle the case where no description
	is found.

2008-08-12  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-emacs-features):
	argumentative-bod-function: bind mark-ring to avoid accumulating a
	spurious mark.

2008-08-12  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (visual-line--saved-state): New var.
	(visual-line-mode): Save local values of variables, and restore
	them when visual-line-mode is disabled.

2008-08-12  NAKAGAWA Makoto  <gha03025@nifty.ne.jp>  (tiny change)

	* net/ldap.el (ldap-search-internal): Tweak URL regexp.

2008-08-11  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cc-defs.el (c-emacs-features): Check
	beginning-of-defun-raw instead of beginning-of-defun, and avoid
	moving point during the test.

	* emacs-lisp/lisp.el (beginning-of-defun): Doc fix.

2008-08-11  Glenn Morris  <rgm@gnu.org>

	* term/ns-win.el (x-parse-geometry): Doc fix.

	* dired.el (x-popup-menu):
	* hi-lock.el (x-popup-menu):
	* mouse.el (font-face-attributes):
	* calendar/cal-menu.el (x-popup-menu):
	* calendar/calendar.el (x-popup-menu):
	* calendar/holidays.el (x-popup-menu):
	* progmodes/cperl-mode.el (x-popup-menu):
	* term/ns-win.el (dnd-open-file, tool-bar-mode, scroll-bar-scale)
	(x-open-connection):
	* term/w32-win.el (x-colors, x-handle-args, x-parse-geometry)
	(x-command-line-resources):
	* term/x-win.el (x-colors, x-parse-geometry, x-resource-name)
	(x-display-name, x-command-line-resources):
	Add declarations for builds without X.

2008-08-10  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-bahai.el (holiday-bahai): Doc fix.

2008-08-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-find-revision): Rename from
	vc-bzr-find-version, forgotten in the 2007-10-10 renaming.

2008-08-10  Michael Albinus  <michael.albinus@gmx.de>

	* net/xesam.el (xesam-search-engines): Add Debbugs hit fields.
	(xesam-refresh-entry): Add Debbugs handling.  Insert a widget